--- a/ai-web/templates/base/adminlte_student_base.html
+++ b/ai-web/templates/base/adminlte_student_base.html
@@ -37,6 +37,12 @@
             <p>Kiểm tra</p>
         </a>
     </li>
+    <li class="nav-item">
+        <a href="{{ url_for('student.weapon_detect') }}" class="nav-link {% if request.endpoint == 'student.weapon_detect' %}active{% endif %}">
+            <i class="nav-icon fas fa-shield-alt"></i>
+            <p>Nhận diện vũ khí</p>
+        </a>
+    </li>
     <li class="nav-item has-treeview {% if 'student_videos' in request.endpoint %}menu-open{% endif %}">
         <a href="#" class="nav-link {% if 'student_videos' in request.endpoint %}active{% endif %}">
             <i class="nav-icon fas fa-video"></i>
